5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1613_1800.log
== TEST (2019-04-04 18:15:38) 
-- CODE:
print(round(a**2+b**2+C**2)/(a+b+c, 7)))
-- ERROR:
File "XXXX", line 1
    print(round(a**2+b**2+C**2)/(a+b+c, 7)))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:15:53) 
-- CODE:
print(round(a**2+b**2+C**2)/(a+b+c, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(a**2+b**2+C**2)/(a+b+c, 7))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:16:22) 
-- CODE:
print(round(a**2+b**2+C**2)/(a+b+c), 7))
-- ERROR:
File "XXXX", line 1
    print(round(a**2+b**2+C**2)/(a+b+c), 7))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:18:59) 
-- CODE:
print(round(a**2+b**2+C**2)/(a+b+c), 7))
a=float(input("digite c"))
b=float(input("digite c"))
c=float(input("digite c"))
-- ERROR:
File "XXXX", line 1
    print(round(a**2+b**2+C**2)/(a+b+c), 7))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:19:48) 
-- CODE:
a=float(input("digite c"))
b=float(input("digite c"))
c=float(input("digite c"))
print(round(a**2+b**2+C**2)/(a+b+c), 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(a**2+b**2+C**2)/(a+b+c), 7)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:20:01) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
print(round(a**2+b**2+C**2)/(a+b+c), 7)
-- EXECUTION TIME:
0.138606
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    print(round(a**2+b**2+C**2)/(a+b+c), 7)
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:09) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
print(round(a**2+b**2+C**2)/(a+b+c), 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(a**2+b**2+C**2)/(a+b+c), 7)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:16) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
print(round(a**2+b**2+c**2)/(a+b+c), 7)
-- OUTPUT:
25.666666666666668 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:29) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
print(round(a**2+b**2+c**2)/(a+b+c), 7)
-- OUTPUT:
25.666666666666668 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:40) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
print(round(a**2+b**2+c**2)/(a+b+c), 7)
-- OUTPUT:
25.666666666666668 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:20:48) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
print(round(a**2+b**2+c**2)/(a+b+c), 7)
-- EXECUTION TIME:
0.203509
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666666666666668 7
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203045685 7
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15094339622641 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:21:08) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
print(round(a**2+b**2+c**2)/(a+b+c), 7)
-- OUTPUT:
25.666666666666668 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:22:11) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
print(round(a**2+b**2+c**2)/(a+b+c),7)
-- OUTPUT:
25.666666666666668 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:22:25) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
print(round(a**2+b**2+c**2)/(a+b+c),7)
-- OUTPUT:
25.666666666666668 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:22:28) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
print(round(a**2+b**2+c**2)/(a+b+c),7)
-- EXECUTION TIME:
0.216546
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666666666666668 7
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203045685 7
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15094339622641 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:22:51) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
print(round(a**2+b**2+c**2)/(a+b+c),7))
-- ERROR:
File "XXXX", line 4
    print(round(a**2+b**2+c**2)/(a+b+c),7))
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:24:20) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
formula = (a**2+b**2+c**2)/(a+b+c)
print(round(formula,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:24:36) 
-- CODE:
a=float(input("digite a"))
b=float(input("digite b"))
c=float(input("digite c"))
formula = (a**2+b**2+c**2)/(a+b+c)
print(round(formula,7))
-- EXECUTION TIME:
0.170365
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
